<resources>
    <string name="app_name">Body Planner</string>
    <string name="action_settings">Settings</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">login</string>

    <string name="sedentary">Sedentary</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="very_active">Very Active</string>
    <string name="extremely_active">Extremely Active</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="kilo_cals">&#160;kCal</string>
    <string name="centimeter">&#160;cm</string>
    <string name="kilogram">&#160;Kg</string>
    <string name="fat">&#160;g \nFat</string>
    <string name="protein">&#160;g \nProtein</string>
    <string name="carbs">&#160;g \nCarbs</string>

    <array name="muscles">
        <item>Abductors</item>
        <item>Abdominals</item>
        <item>Adductors</item>
        <item>Biceps</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Forearms</item>
        <item>Glutes</item>
        <item>Hamstrings</item>
        <item>Lats</item>
        <item>Lower Back</item>
        <item>Middle Back</item>
        <item>Neck</item>
        <item>Quadriceps</item>
        <item>Shoulders</item>
        <item>Traps</item>
        <item>Triceps</item>
    </array>

    <array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </array>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="subtitle">SubTitle</string>
    <string name="title">Title</string>

    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_application_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="scale_image">Scale Image</string>
    <string name="weight_kg">Weight Kg</string>
    <string name="body_fat">Body Fat %</string>
    <string name="neck_cm">Neck cm</string>
    <string name="shoulders_cm">Shoulders cm</string>
    <string name="chest_cm">Chest cm</string>
    <string name="neck_image">Neck Image</string>
    <string name="hips_cm">Hips cm</string>
    <string name="waist_cm">Waist cm</string>
    <string name="torso_image">Torso Image</string>
    <string name="sets">Sets</string>
    <string name="reps_per_set">Reps Per Set</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="equipment_used">Equipment used:</string>
    <string name="instructions">Instructions</string>
    <string name="none">None</string>
    <string name="monday_edit_program_button">Monday edit program button</string>
    <string name="sunday_edit_program_button">Sunday edit program button</string>
    <string name="saturday_edit_program_button">Saturday edit program button</string>
    <string name="friday_edit_program_button">Friday edit program button</string>
    <string name="thursday_edit_program_button">Thursday edit program button</string>
    <string name="wednesday_edit_program_button">Wednesday edit program button</string>
    <string name="tuesday_edit_program_button">Tuesday edit program button</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="app_logo_image">app logo image</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>

    <string name="my_info">My Info</string>
    <string name="age">Age</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="sex">Sex</string>
    <string name="sex_1">Sex</string>
    <string name="activity_level">Activity Level</string>
    <string name="save">Save</string>
    <string name="height">Height</string>
    <string name="day_of_week">Day of Week</string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="resting_energy_expenditure">Resting Energy Expenditure</string>
    <string name="total_daily_energy_expenditure">Total Daily Energy Expenditure</string>
    <string name="exercise">Exercise</string>
    <string name="calories">Calories</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="left_arm_cm">Left Arm cm</string>
    <string name="right_arm_cm">Right Arm cm</string>
    <string name="left_forearm_cm">Left Forearm cm</string>
    <string name="right_forearm_cm">Right Forearm cm</string>
    <string name="left_thigh_cm">Left Thigh cm</string>
    <string name="right_thigh_cm">Right Thigh cm</string>
    <string name="left_calf_cm">Left Calf cm</string>
    <string name="right_calf_cm">Right Calf cm</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="muscle">Muscle</string>
    <string name="set_num">Set #</string>
    <string name="num_of_reps"># of Reps</string>
    <string name="bmi">BMI</string>
    <string name="bmi_category">BMI Category</string>
    <string name="waist_to_height_category">Waist To Height Category</string>

    <!--Toast Messages-->
    <string name="toast_sets_reps_null">Sets and reps fields cannot be blank or 0</string>
    <string name="toast_exercise_added">Exercise added to program</string>
    <string name="toast_error_occured">An Error occurred, please try again</string>

    <!--Measurement array-->
    <array name="measure">
        <item>Neck</item>
        <item>Chest</item>
        <item>Shoulder</item>
        <item>Left Arm</item>
        <item>Right Arm</item>
        <item>Left Forearm</item>
        <item>Right Forearm</item>
        <item>Waist</item>
        <item>Hips</item>
        <item>Left Thigh</item>
        <item>Right Thigh</item>
        <item>Left Calf</item>
        <item>Right Calf</item>
        <item>Weight</item>
        <item>Body Fat</item>
        <item>All</item>
    </array>

    <string name="neck">Neck</string>
    <string name="chest">Chest</string>
    <string name="shoulder">Shoulder</string>
    <string name="left_arm">Left Arm</string>
    <string name="right_arm">Right Arm</string>
    <string name="left_forearm">Left Forearm</string>
    <string name="right_forearm">Right Forearm</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="left_thigh">Left Thigh</string>
    <string name="right_thigh">Right Thigh</string>
    <string name="left_calf">Left Calf</string>
    <string name="right_calf">Right Calf</string>
    <string name="weight">Weight</string>
    <string name="body_fat_string">Body Fat</string>
    <string name="all">All</string>

    <!--Chart-->
    <string name="chart_title">My Weekly Progress</string>
    <string name="change">Change</string>
    <string name="measure_toast_message">Weight and Waist cannot be blank or empty</string>
    <string name="measure_toast_error">Please add basic information before adding a measurement</string>

    <!--Titles-->
    <string name="my_progress">My Progress</string>
    <string name="add_measurement">"Add Measurement"</string>
    <string name="my_stats">My Stats</string>
    <string name="my_program">My Program</string>
    <string name="title_progress">&#160;Progress</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_no_program">No program set for today!</string>
    <string name="invite_message">Hey check out this exercise program planning app at:</string>
    <string name="invite_title">Send to:</string>
    <string name="acc_create_canceled">Account Creation Canceled</string>
    <string name="verification_sent">Verification Email sent</string>
    <string name="verification_not_sent">Verification Email could not be sent</string>
    <string name="acc_creation_unsuccessfull">Account Creation Unsuccessful</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="fill_all_fields">Please fill out all fields</string>
    <string name="all_fields_to_be_filled">all fields must be filled out</string>
    <string name="invalid_credentials">Invalid Credentials  Reset your Password and try again</string>
    <string name="sent_verification">Sent Verification Email</string>
    <string name="couldnt_send_email">couldn\'t send email</string>
    <string name="age_height_error">Age and Height cannot be 0</string>
    <string name="age_height_error_blank">Age and Height cannot be left blank</string>
    <string name="basic_info_saved">Basic info saved!</string>
    <string name="password_reset_link">Password Reset Link Sent to Email</string>
    <string name="no_user_email">No User is Associated with that Email</string>
    <string name="measurement_error_message">You have not added any measurements yet, Please add a measurement and try again</string>
    <string name="logout_message">Successfully logged out</string>
    <string name="update_info">Update Info</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="spinner">Spinner</string>
    <string name="image_of_a_chart_to_represent_stats">Image of a chart to represent stats.</string>
    <string name="image_of_a_calender">Image of a calender</string>
    <string name="image_of_a_flexed_arm">Image of a flexed arm</string>
    <string name="image_of_human_hips">Image of human hips</string>
    <string name="image_of_a_chart">Image of a chart</string>
    <string name="add_a_exercises_to_my_program">Add a Exercises to my program</string>
    <string name="login_to_app">Login to app</string>
    <string name="communicate_string">Communicate</string>
    
    <!--Recycler Text view concats-->
    <string name="recycler_sets">Sets:&#160;</string>
    <string name="recycler_reps">&#160;Reps per set:&#160;</string>
    <string name="recycler_set">Set:&#160;</string>
    <string name="recycler_rep">Reps:&#160;</string>
    <string name="program_saved">Program for&#160;</string>
    <string name="p_saved">&#160;saved.</string>
    <string name="p_updated">&#160;Updated!</string>
    <string name="logged_in">Logged In</string>
    <string name="verify_your_email">Please Verify your email address</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="measurement_saved_toast">Measurement Saved.</string>
    <string name="calander_week">CW</string>

</resources>

