<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_scale"
            android:title="@string/my_stats" />
        <item
            android:id="@+id/nav_measure"
            android:icon="@drawable/ic_body"
            android:title="@string/add_measurement" />
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_dumbbell"
            android:title="@string/my_program" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_linechart"
            android:title="@string/my_progress" />
    </group>

    <item android:title="@string/communicate_string">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/update_info" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
