<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.LoginActivity"
    android:background="@color/BlackLight">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_logo_image" />

        <EditText
            android:id="@+id/login_activity_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_activity_password_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="@color/White"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="286dp" />

        <EditText
            android:id="@+id/login_activity_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/White"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_activity_email_edit_text" />

        <TextView
            android:id="@+id/login_resend_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_activity_login_button"
            android:layout_alignStart="@+id/login_forgot_password"
            android:layout_margin="8dp"
            android:text="@string/resend_verification_email"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/PAMPAS"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_activity_register_new"
            app:layout_constraintVertical_bias="0.032" />

        <TextView
            android:id="@+id/login_activity_register_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_activity_login_button"
            android:layout_margin="8dp"
            android:clickable="true"
            android:text="@string/register_new_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/PAMPAS"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_activity_login_button"
            android:focusable="true" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_activity_email_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/PAMPAS"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_activity_password_edit_text" />

        <Button
            android:id="@+id/login_activity_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/accent_button_rectangle"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forgot_password"
            android:contentDescription="@string/login_to_app"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/email_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>