<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlackLight"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    app:layout_gravity="center">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/my_program"
        android:textAlignment="center"
        android:textColor="@color/PAMPAS"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="8dp"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center_horizontal"
        android:text="@string/appwidget_text"
        android:textAlignment="center"
        android:textColor="@color/PAMPAS"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/widget_program_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/PAMPAS"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>